@@ -1,3 +1,5 @@
+- change to PDL 2.047 with native complex i()
+
 0.18 2021-05-03
 - stop loading PDL::Complex and overriding PDL:: functions
 
